force-app/main/default/objects/sugati__Booking_Doc__c/sugati__Booking_Doc__c.object-meta.xml
<CustomObject>
    <label>Booking Doc</label>
    <nameField>
        <displayFormat>BD-{000000}</displayFormat>
        <label>Booking Docs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Docs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>