force-app/main/default/objects/sugati__Booking_Doc__c/fields/sugati__BD_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__BD_Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Destination</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>