force-app/main/default/objects/sugati__Booking_Doc__c/fields/sugati__BD_Document_URL__c.field-meta.xml
<CustomField>
    <fullName>sugati__BD_Document_URL__c</fullName>
    <inlineHelpText>URL which is accessible on the web</inlineHelpText>
    <label>Document URL</label>
    <type>Url</type>
</CustomField>