force-app/main/default/objects/sugati__Booking_Doc__c/fields/sugati__BD_External_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__BD_External_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Allows the record to map with external systems</inlineHelpText>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>