force-app/main/default/objects/sugati__Booking_Doc__c/fields/sugati__BD_Externally_Available__c.field-meta.xml
<CustomField>
    <fullName>sugati__BD_Externally_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Externally Available</label>
    <type>Checkbox</type>
</CustomField>