force-app/main/default/objects/sugati__Booking_Doc__c/fields/sugati__BD_File_Attachment_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__BD_File_Attachment_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Record Id of the attachment or content version</inlineHelpText>
    <label>File/Attachment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>