force-app/main/default/objects/sugati__Booking_Doc__c/fields/sugati__BD_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__BD_Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Booking Docs</relationshipLabel>
    <relationshipName>Booking_Docs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>