force-app/main/default/objects/sugati__Booking_Doc__c/fields/sugati__BD_Source__c.field-meta.xml
<CustomField>
    <fullName>sugati__BD_Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vamoos</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>