force-app/main/default/objects/sugati__Booking_Doc__c/fields/sugati__BD_Title__c.field-meta.xml
<CustomField>
    <fullName>sugati__BD_Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>